crates/analyzer/tests/snapshots/errors__shadow_builtin_type_with_var.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: variable name conflicts with built-in type
  ┌─ [snippet]:3:7
  │
3 │   let u8: u8 = 10
  │       ^^ `u8` is a built-in type


