crates/analyzer/tests/snapshots/errors__sneaky_mutation.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: mutability mismatch
  ┌─ compile_errors/sneaky_mutation.fe:7:13
  │
7 │     let mut y0: Array<u8, 3> = x
  │             ^^                 - this value is not mutable
  │             │                   
  │             this is defined to be mutable

error: can't create a mutable alias of an immutable value
   ┌─ compile_errors/sneaky_mutation.fe:12:5
   │
12 │     y1 = x
   │     ^^   - this is immutable
   │     │     
   │     this is mutable

error: can't create a mutable alias of an immutable value
   ┌─ compile_errors/sneaky_mutation.fe:32:5
   │
32 │     w1.array = imm
   │     ^^^^^^^^   --- this is immutable
   │     │           
   │     this is mutable

error: argument to function `set_array2` must be mutable
   ┌─ compile_errors/sneaky_mutation.fe:39:19
   │
39 │     w2.set_array2(imm)
   │                   ^^^ this is not mutable

error: can't create a mutable alias of an immutable value
   ┌─ compile_errors/sneaky_mutation.fe:49:9
   │
49 │         self.array = array
   │         ^^^^^^^^^^   ----- this is immutable
   │         │             
   │         this is mutable


