crates/analyzer/tests/snapshots/errors__strict_boolean_if_else.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `if` statement condition is not bool
  ┌─ compile_errors/strict_boolean_if_else.fe:3:12
  │
3 │         if val:
  │            ^^^ this has type `u256`; expected type `bool`


