crates/analyzer/tests/snapshots/errors__string_constructor_no_type_arg_list.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `String` type requires a max size argument
  ┌─ [snippet]:3:3
  │
3 │   String()
  │   ^^^^^^
  │
  = Example: String<100>


