crates/analyzer/tests/snapshots/errors__string_constructor_two_int_type_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: invalid `String` type argument
  ┌─ [snippet]:3:9
  │
3 │   String<1, 2>()
  │         ^^^^^^ expected an integer
  │
  = Example: String<100>


